fixing an overflow problem

--- a/static/style/home-styles.css
+++ b/static/style/home-styles.css
@@ -10,6 +10,7 @@ body {
   --dot-space: 22px;
   width: 100vw;
   height: 100%;
+  overflow-x: hidden;
 }
 
 /* component */
